--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-	<body>Created git repository</body>
+	<body>Created git repository, added global config for author tracking</body>
 </html>
